# rsut_pdf_mcp

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_REFACTOR_PLAN.md  CSS_REFACTOR_SUMMARY.md  DESIGN.md  Dockerfile  Dockerfile.simple  LICENSE  MCP_OPTIMIZATION_PLAN.md  PDFiumConfig.cmake  PRODUCT.md  README.en.md  README.md  RUST_ECOSYSTEM_SELECTION.md  RUST_REWRITE_PLAN.md  deepseek_gateway.js  deepseek_gateway.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  install.sh  nginx.conf
config-examples/: README.md  claude-desktop-config.json  cursor-mcp-local.json  cursor-mcp-remote.json  python_client_example.py
docker/: Dockerfile.ci  Dockerfile.mcp
docs/: AI_AGENT_SETUP_GUIDE.md  API_REFERENCE.md  CLIENT_SETUP_GUIDE.md  KNOWLEDGE_COMPILATION_GUIDE.md  VLM_INTEGRATION.md  api.md  configuration.md  dependencies.md  deployment.md  (+3 more)
pdf-mcp-installer/: Cargo.toml  INTERACTIVE_MODE.md  README.md
pdf-mcp-installer/src/: main.rs
pdf-module-rs/: .clippy.toml  .dockerignore  .env.example  .gitignore  ADVANCED_ETL_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Dockerfile.etl  Dockerfile.local  Dockerfile.mcp  Dockerfile.prebuilt  Dockerfile.simple  README.md  REVIEW.md  deny.toml  docker-compose.advanced.yml  docker-compose.etl.yml  docker-compose.yml  init-db.sql  rust-toolchain.toml
pdf-module-rs/1panel/: app.yaml
pdf-module-rs/crates/pdf-cli/: Cargo.toml
pdf-module-rs/crates/pdf-cli/src/: main.rs
pdf-module-rs/crates/pdf-common/: Cargo.toml
pdf-module-rs/crates/pdf-common/src/: circuit_breaker.rs  config.rs  dto.rs  error.rs  lib.rs  traits.rs
pdf-module-rs/crates/pdf-common/tests/: integration_tests.rs
pdf-module-rs/crates/pdf-core/: Cargo.toml
pdf-module-rs/crates/pdf-core/src/: cache.rs  config.rs  container.rs  dto.rs  error.rs  extractor.rs  keyword.rs  lib.rs  metrics.rs  mmap_loader.rs  quality_probe.rs  validator.rs  vlm_pipeline.rs  wiki.rs
pdf-module-rs/crates/pdf-core/src/audit/: audit_log.rs  audit_service.rs  extraction_audit.rs  mod.rs
pdf-module-rs/crates/pdf-core/src/control/: audit_logger.rs  circuit_breaker.rs  control_plane.rs  metrics_collector.rs  mod.rs  rate_limiter.rs  schema_manager.rs
pdf-module-rs/crates/pdf-core/src/database/: mod.rs  surreal_store.rs
pdf-module-rs/crates/pdf-core/src/engine/: lopdf.rs  mod.rs  pdf_extract.rs  pdfium.rs  trait.rs
pdf-module-rs/crates/pdf-core/src/knowledge/: README.md  cache_db.rs  engine.rs  entry.rs  hash_cache.rs  mod.rs  quality.rs
pdf-module-rs/crates/pdf-core/src/knowledge/index/: community.rs  fulltext.rs  graph.rs  mod.rs  tokenizer.rs  vector.rs
pdf-module-rs/crates/pdf-core/src/management/: config_manager.rs  health_reporter.rs  mod.rs  types.rs
pdf-module-rs/crates/pdf-core/src/parallel/: batch_processor.rs  mod.rs  work_stealing.rs
pdf-module-rs/crates/pdf-core/src/plugin/: compile_time_discovery.rs  discovery.rs  dispatcher.rs  metadata_cache.rs  mod.rs  registry.rs  registry_trait.rs  runtime_discovery.rs  tool_handler.rs  unified_discovery.rs
pdf-module-rs/crates/pdf-core/src/plugin/adapters/: database.rs  etl_workflow.rs  minimax.rs  mod.rs  pdf_extractor.rs  remote.rs
pdf-module-rs/crates/pdf-core/src/progress/: mod.rs  tracker.rs
pdf-module-rs/crates/pdf-core/src/protocol/: mod.rs  runtime_variables.rs  tool_definition.rs  tool_spec.rs
pdf-module-rs/crates/pdf-core/src/storage/: factory.rs  file_storage.rs  local_storage.rs  mod.rs  s3_storage.rs
pdf-module-rs/crates/pdf-core/src/streamer/: mod.rs  sse.rs  stdio.rs  streamer.rs  tool_message.rs
pdf-module-rs/crates/pdf-core/tests/: e2e_test.rs  integration_test.rs  perf_test.rs  stress_test.rs
pdf-module-rs/crates/pdf-dashboard/: Cargo.toml
pdf-module-rs/crates/pdf-dashboard/src/: main.rs
pdf-module-rs/crates/pdf-etl/: Cargo.toml
pdf-module-rs/crates/pdf-etl/src/: dto.rs  error.rs  lib.rs  security.rs
pdf-module-rs/crates/pdf-etl/src/config/: mod.rs
pdf-module-rs/crates/pdf-etl/src/database/: adapter.rs  factory.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
pdf-module-rs/crates/pdf-etl/src/llm/: adapter.rs  azure.rs  factory.rs  mod.rs  ollama.rs  openai.rs
pdf-module-rs/crates/pdf-etl/src/pipeline/: advanced_pipeline.rs  etl_pipeline.rs  extraction_engine.rs  mod.rs  structured_extractor.rs
pdf-module-rs/crates/pdf-etl/src/schema/: mod.rs  schema_definition.rs  validator.rs
pdf-module-rs/crates/pdf-etl/src/tools/: extract_and_save.rs  mod.rs
pdf-module-rs/crates/pdf-macros/: Cargo.toml
pdf-module-rs/crates/pdf-macros/src/: lib.rs
pdf-module-rs/crates/pdf-mcp/: Cargo.toml
pdf-module-rs/crates/pdf-mcp/descriptions/: cache_stats.md  extract_keywords.md  extract_structured.md  extract_text.md  get_page_count.md  list_adapters.md  search_keywords.md
pdf-module-rs/crates/pdf-mcp/src/: bootstrap.rs  main.rs  mcp_server.rs  server.rs  sse.rs
pdf-module-rs/crates/pdf-mcp/src/protocol/: mod.rs
pdf-module-rs/crates/pdf-mcp/src/sampling/: client.rs  manager.rs  mod.rs
pdf-module-rs/crates/pdf-mcp/src/tools/: extract.rs  index.rs  knowledge.rs  management.rs  mod.rs  resources.rs
pdf-module-rs/crates/pdf-mcp/src/transport/: mod.rs
pdf-module-rs/crates/pdf-mcp/src/ui/: dashboard.html
pdf-module-rs/crates/pdf-mcp/tests/: tool_description_test.rs
pdf-module-rs/crates/pdf-python/: Cargo.toml
pdf-module-rs/crates/pdf-python/src/: lib.rs
pdf-module-rs/crates/pdf-rest/: Cargo.toml
pdf-module-rs/crates/pdf-rest/src/: main.rs  routes.rs
pdf-module-rs/crates/pdf-rest/src/api/: audit.rs  health.rs  metrics.rs  mod.rs
pdf-module-rs/crates/pdf-wasm/: Cargo.toml
pdf-module-rs/crates/pdf-wasm/src/: arena.rs  error.rs  lib.rs  slice.rs
pdf-module-rs/crates/pdf-web/: Cargo.toml
pdf-module-rs/crates/pdf-web/src/: main.rs
pdf-module-rs/crates/pdf-web/src/ui/: index.html
pdf-module-rs/crates/vlm-visual-gateway/: Cargo.toml
pdf-module-rs/crates/vlm-visual-gateway/src/: buffer.rs  detector.rs  error.rs  gateway.rs  lib.rs  metrics.rs  pdfium_guard.rs  types.rs
pdf-module-rs/examples/: advanced_etl_example.rs
(+229 files in other folders)
