[package]
name = "pdf-mcp-cli"
version = "0.1.3"
edition = "2021"
description = "PDF Module MCP 命令行配置管理工具"
authors = ["PDF Module Team"]

[dependencies]
colored = "2.0"
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
chrono = "0.4"

[[bin]]
name = "pdf-mcp-cli"
path = "src/main.rs"
