[workspace]
resolver = "2"
members = [
    "crates/pdf-common",
    "crates/pdf-macros",
    "crates/pdf-core",
    "crates/pdf-mcp",
    "crates/vlm-visual-gateway",
    "crates/pdf-dashboard",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
pdfium-render = { version = "0.8", features = ["sync"] }
dotenvy = "0.15"
toml = "0.8"
serde_yaml = "0.9"
infer = "0.16"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
parking_lot = "0.12"
pdf-common = { path = "crates/pdf-common", version = "0.3.0" }
pdf-macros = { path = "crates/pdf-macros", version = "0.1.0" }
pdf-core = { path = "crates/pdf-core", version = "0.3.0" }
vlm-visual-gateway = { path = "crates/vlm-visual-gateway", version = "0.1.0" }
prometheus = "0.14"
memmap2 = "0.9"
bumpalo = { version = "3.16", features = ["collections"] }
sha2 = "0.10"
once_cell = "1.19"
