[workspace]
resolver = "2"
members = [
    "crates/pdf-common",
    "crates/pdf-macros",
    "crates/pdf-core",
    "crates/pdf-mcp",
    "crates/pdf-wasm",
    "crates/vlm-visual-gateway",
    "crates/pdf-dashboard",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
pdfium-render = { version = "0.8", features = ["sync"] }
dotenvy = "0.15"
toml = "0.8"
serde_yaml = "0.9"
infer = "0.16"
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
parking_lot = "0.12"
pdf-common = { path = "crates/pdf-common", version = "0.3.0" }
pdf-macros = { path = "crates/pdf-macros", version = "0.1.0" }
pdf-core = { path = "crates/pdf-core", version = "0.3.0" }
vlm-visual-gateway = { path = "crates/vlm-visual-gateway", version = "0.1.0" }
prometheus = "0.14"
memmap2 = "0.9"
bumpalo = { version = "3.16", features = ["collections"] }
sha2 = "0.10"
once_cell = "1.19"
# Parallel processing
rayon = "1.10"
num_cpus = "1.16"
crossbeam-deque = "0.8"
# Async utilities
tokio-util = "0.7"
# Knowledge indexing
tantivy = "0.22"
petgraph = "0.7"
# Progress tracking
indicatif = "0.17"
console = "0.15"

# WASM release optimizations (see rust-wasm-frontend-infra-guide)
[profile.wasm-release]
inherits = "release"
opt-level = 's'        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
panic = 'abort'        # Smaller binary
strip = true           # Strip symbols
