[package]
name = "pdf-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing rsut-pdf-mcp knowledge bases — health, config, compile, index"
license = "MIT"

[[bin]]
name = "pdf-cli"
path = "src/main.rs"

[dependencies]
pdf-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
