[package]
name = "pdf-common"
version = "0.1.0"
edition = "2021"
description = "Common types, errors, and utilities shared across pdf-module crates"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Time
chrono = { workspace = true }

# Async runtime (for atomics in circuit breaker)
tokio = { workspace = true }

# Configuration parsing
toml = { workspace = true }

# Proc macros
pdf-macros = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
