[package]
name = "pdf-common"
version = "0.3.0"
edition = "2021"
description = "Minimal shared types and errors for pdf-module"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
pdf-macros = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
