[package]
name = "pdf-core"
version = "0.3.0"
edition = "2021"
description = "Pure PDF extraction pipe: pdfium engine, zero state, zero cache"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
pdf-common = { workspace = true }
pdfium-render = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }
serde_yaml = { workspace = true }
infer = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
vlm-visual-gateway = { workspace = true }
prometheus = { workspace = true }
memmap2 = { workspace = true }
bumpalo = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
