[package]
name = "pdf-dashboard"
version = "0.3.0"
edition = "2021"
description = "Dashboard HTTP API for pdf-module monitoring"

[[bin]]
name = "pdf-dashboard"
path = "src/main.rs"

[dependencies]
pdf-core = { path = "../pdf-core" }
vlm-visual-gateway = { path = "../vlm-visual-gateway" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
parking_lot = "0.12"
