[package]
name = "pdf-dashboard"
version = "0.3.0"
edition = "2021"
description = "Dashboard HTTP API for pdf-module monitoring"
license = "MIT"

[[bin]]
name = "pdf-dashboard"
path = "src/main.rs"

[dependencies]
pdf-core = { workspace = true }
vlm-visual-gateway = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
parking_lot = "0.12"
