[package]
name = "pdf-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP (Model Context Protocol) server for PDF extraction"

[[bin]]
name = "pdf-mcp"
path = "src/main.rs"

[dependencies]
pdf-core = { path = "../pdf-core" }

# 异步
tokio = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 配置
dotenvy = { workspace = true }

# CLI
clap = { workspace = true }

# MCP
rust-mcp-sdk = { workspace = true }
sse = { workspace = true }

# Web (for SSE)
axum = { workspace = true }
tower-http = { workspace = true }
futures-util = "0.3"
async-stream = "0.3"

# 错误
anyhow = { workspace = true }
