[package]
name = "pdf-mcp"
version = "0.3.0"
edition = "2021"
description = "MCP stdio pipe for PDF extraction — pdfium only, zero state"

[[bin]]
name = "pdf-mcp"
path = "src/main.rs"

[dependencies]
pdf-core = { path = "../pdf-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
regex = "1"
