[package]
name = "pdf-mcp"
version = "0.3.0"
edition = "2021"
description = "MCP stdio pipe for PDF extraction — pdfium only, zero state"
license = "MIT"

[[bin]]
name = "pdf-mcp"
path = "src/main.rs"

[dependencies]
pdf-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
anyhow = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust-embed = { workspace = true }
regex = "1"
