[package]
name = "pdf-rest"
version = "0.1.0"
edition = "2021"
description = "REST API server for PDF extraction"

[[bin]]
name = "pdf-rest"
path = "src/main.rs"

[dependencies]
pdf-core = { path = "../pdf-core" }

# 异步
tokio = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# 配置
dotenvy = { workspace = true }

# CLI
clap = { workspace = true }

# Web
axum = { workspace = true }
tower-http = { workspace = true }

# 可观测性
metrics-exporter-prometheus = { workspace = true }

# 错误
anyhow = { workspace = true }

# 时间
chrono = { workspace = true }

# 临时文件
tempfile = "3.10"

[dev-dependencies]
reqwest = { version = "0.12", features = ["multipart", "json"] }
