[package]
name = "pdf-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM PDF extraction engine with Arena allocator and zero-copy interop"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bumpalo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dependencies.wasm-bindgen]
version = "0.2"
optional = true

[dependencies.web-sys]
version = "0.3"
optional = true
features = ["console"]

[dependencies.js-sys]
version = "0.3"
optional = true

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.talc]
version = "4"
optional = true

[dependencies.tracing-wasm]
version = "0.2"
optional = true

[features]
default = []
wasm = ["wasm-bindgen", "web-sys", "js-sys", "console_error_panic_hook", "talc", "tracing-wasm"]
